--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -10,8 +10,17 @@
     <p>Квадратное уравнение a*x*x + b*x +c = 0</p>
   <ul>
 	  <li>a = {{ a }}</li>
+      {% if a_message %}
+        {{ a_message }}
+      {% endif %}
 	  <li>b = {{ b }}</li>
+      {% if b_message %}
+        {{ b_message }}
+      {% endif %}
       <li>c = {{ c }}</li>
+      {% if c_message %}
+        {{ c_message }}
+      {% endif %}
   </ul>
     {% if calculate_Done %}
 <p>Дискриминант: {{ D }}</p>
