Added polls files

--- a/pybursa/quadratic/templates/results.html
+++ b/pybursa/quadratic/templates/results.html
@@ -5,14 +5,7 @@
   </head>
 
   <body>
-    <pre>Квадратное уравнения: a*x*x + b*x +c = 0</pre>
-    <pre>
-    a = {{a}}
-    {{check_on_error_a}}
-    b = {{b}}
-    {{check_on_error_b}}
-    c = {{c}}
-    {{check_on_error_c}}
-    </pre>
+    <h1>Квадратное уравнение</h1>
+    {{ sl }}
   </body>
 </html>
