--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
         <a class="navbar-brand" href="{% url 'index' %}">Main</a>
         <a class="navbar-brand" href="{% url 'contact' %}">Contacts</a>
         <a class="navbar-brand" href="{% url 'student_list' %}">Students</a>
-        <a class="navbar-brand" href="{% url 'results' %}">Eq_result</a>
+        <a class="navbar-brand" href="{% url 'results' %}">Quadratic</a>
       </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
