--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,3 +1,4 @@
+<html>
 <h1> Quadratic </h1>
 <div> Calculating ax<sup>2</sup> + bx + c = 0</div>
 <br>
@@ -20,4 +21,4 @@ c = {{ c }} <br>
         Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений. <br>                
     {% endif %}
 {% endif %}
-
+</html>
