--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,4 +1,3 @@
-<html>
 <h1> Quadratic </h1>
 <div> Calculating ax<sup>2</sup> + bx + c = 0</div>
 <br>
@@ -18,7 +17,11 @@ c = {{ c }} <br>
         Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x1 }} <br>
     {% elif D < 0 %}
         Дискриминант: {{ D }} <br>
-        Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений. <br>                
+        Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений. <br>
+<br>
+        P.S.  А на самом деле решение есть: <br>
+        x<sub>1</sub> = {{ x1 }} <br>
+        x<sub>2</sub> = {{ x2 }} <br>                
     {% endif %}
 {% endif %}
-</html>
+
