polls and gitignore added, virt env and pybursa proj created

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -102,6 +102,10 @@ td {
   padding-top: 15px;
 }
 
+.manager {
+  padding-left: 80px;
+}
+
 #header_sponsors_contacts {
   text-align: center;
   color: #38300A;
