--- a/templates/contact.html
+++ b/templates/contact.html
@@ -61,7 +61,7 @@
           <tr>
           <td rowspan="2" class="contacts_td"><img class="contacts_image" src=
       "../static/images/imagehere.jpg"></td>
-          <td class="contacts_td">
+          <td class="contacts_td manager">
           <ul>
           <li>Name: Daria Mykhalevych</li>
           <li>Skype: darka.darka.darka.darka.</li>
