--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -60,15 +60,15 @@
         </tr>
         <tr class="grey_row">
           <td>2</td>
-          <td>Super</td>
-          <td>Man</td>
+          <td>Kent</td>
+          <td>Clark</td>
           <td>Krypton</td>
           <td>superman90</td>
         </tr>
         <tr>
           <td>3</td>
-          <td>Burnside</td>
-          <td>William</td>
+          <td>Rogers</td>
+          <td>Steve</td>
           <td>USA</td>
           <td>captain_america</td>
         </tr>
@@ -81,8 +81,8 @@
         </tr>
         <tr>
           <td>5</td>
-          <td>Hulk</td>
-          <td>Hulk</td>
+          <td>Banner</td>
+          <td>Bruse</td>
           <td>India</td>
           <td>thehulk</td>
         </tr>
