--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -1,3 +1,5 @@
+# -*- coding: utf-8 -*-
+
 {% load staticfiles %}
 
 <!DOCTYPE html>
@@ -13,7 +15,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <link rel="icon" href="{% static 'images/Other-python.ico' %}">
-  <title>PyBursa: Contact page</title>
+  <title>PyBursa: Equation results</title>
   <!-- Bootstrap core CSS -->
   <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
   <!-- Custom styles for this template -->
@@ -45,9 +47,9 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li><a href="{% url 'index' %}">Main</a></li>
-          <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
+          <li><a href="{% url 'contact' %}">Contacts</a></li>
           <li><a href="{% url 'student_list' %}">Students</a></li>
-          <li><a href="{% url 'results' %}">Equation</a></li>
+          <li class="active"><a href="{% url 'results' %}">Equation</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
@@ -55,46 +57,18 @@
   </nav>
   <!-- Begin page content -->
   <div class="container">
-    <!-- <div class="page-header">
-        <h1>Профессиональные Python &amp; Django курсы</h1>
-        </div> -->
-    <!-- My code here -->
-    <div class="container" id="cnt1">
-      <div class="row feature">
-        <div class="col-md-4">
-          <div>
-            <img src="{% static 'images/pasha.jpg' %}" alt="Павел Обод" class="img-circle img-thumbnail">
-            <h2>Founder</h2>
-            <p><b>Name:</b> Павел Обод</p>
-            <p><b>Email:</b> itbursa100@gmail.com</p>
-            <p><b>Phone:</b> 0-800-555-44-00</p>
-            <p><b>Skype:</b> azaless</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div>
-            <img src="{% static 'images/alena.jpg' %}" alt="Алена Чайка" class="img-circle img-thumbnail">
-            <h2>Director</h2>
-            <p><b>Name:</b> Алена Чайка</p>
-            <p><b>Email:</b> alena.itbursa@gmail.com</p>
-            <p><b>Phone:</b> 0-800-555-23-25</p>
-            <p><b>Skype:</b> alena.itbursa</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div>
-            <img src="{% static 'images/darka.jpg' %}" alt="Дария Михалевич" class="img-circle img-thumbnail">
-            <h2>Manager</h2>
-            <p><b>Name:</b> Дария Михалевич</p>
-            <p><b>Email:</b> daria.mykhalevych@gmail.com</p>
-            <p><b>Phone:</b> 0-800-555-11-12</p>
-            <p><b>Skype:</b> darka.darka.darka.darka.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!--  end of my code -->
+    <h3>QUADRATIC EQUATION RESULTS</h3>
+    <ul>
+     {% for vkey, vval in values %}
+     <li>{{vkey}} = {{vval}}</li>
+     <div class="msg_alert">{{ messages|get_item:vkey }}</div>
+     {% endfor %}
+     </ul>
+     <div>{{ discr|get_item:'D' }}</div>
+     <div>{{ discr|get_item:'D_msg' }}</div>
+     <!-- <div id="divider">&nbsp;</div> -->
   </div>
+  <br>
   <footer class="footer">
     <div class="container">
       <p class="text-muted">san '2015. All rights reserved.</p>
@@ -107,6 +81,11 @@
   <script src="{% static 'js/bootstrap.js' %}"></script>
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
+  <script>
+    $('#row1').on('click', function() {
+      window.location = "student_detail.html";
+    });
+  </script>
 </body>
 
 </html>
