--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -13,7 +13,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <link rel="icon" href="{% static 'images/Other-python.ico' %}">
-  <title>PyBursa: Main page</title>
+  <title>PyBursa: Student details</title>
   <!-- Bootstrap core CSS -->
   <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
   <!-- Custom styles for this template -->
@@ -47,6 +47,7 @@
           <li><a href="{% url 'index' %}">Main</a></li>
           <li><a href="{% url 'contact' %}">Contacts</a></li>
           <li><a href="{% url 'student_list' %}">Students</a></li>
+          <li><a href="{% url 'results' %}">Equation</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
