--- a/pybursa/templates/contact.html
+++ b/pybursa/templates/contact.html
@@ -58,7 +58,7 @@
 	      <img src="{% static 'images/pic6.jpg' %}" width="100px" height="100px" class="img-circle">
 	      <div class="caption">
 	        <h3>Director</h3>
-	        <p>Name: Daria Bondarenko</p>
+	        <p>Name: Alina Ivanova</p>
 	        <p>Skype: daria</p> 
 	        <p>Phone: (123) 456-7890</p>
 	        <p><a href="{% static 'images/pic6.jpg' %}" class="btn btn-primary" role="button">Contact</a> 
