--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -1,2 +1,12 @@
-<h1>Квадратное уравнение</h1>
-{{ sl }}
+<h1>Квадратное уравнение a*x*x + b*x + c = 0</h1>
+<ul>
+<li>a = {{ a }}</li>
+{% if a == '0' %}коэффициент при первом слагаемом уравнения не может быть равным нулю{% elif a == ''%}коэффициент не определен{% elif a.isdigit == False%}коэффициент не целое число{% endif %}
+<li>b = {{ b }}</li>
+{% if b == '' %}коэффициент не определен{% elif b.isdigit == False%}коэффициент не целое число{% endif %}
+<li>c = {{ c }}</li>
+{% if c == '' %}коэффициент не определен{% elif c.isdigit == False%}коэффициент не целое число{% endif %}
+</ul>
+
+<h3>Дискриминант: {{ discr }}</h3>
+<h3>{% if discr < 0 %}Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.{% elif discr == 0 %}Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x }}{% elif discr > 0 %}Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}{% endif %}</h3>
