--- a/templates/contact.html
+++ b/templates/contact.html
@@ -50,6 +50,7 @@
             <li><a href="{% url 'index' %}">Main</a></li>
             <li class="/active/"><a href="{% url 'contact' %}">Contacts</a></li>
             <li><a href="{% url 'student_list' %}">Students</a></li>
+            <li><a href="{% url 'equation' %}">Equotion</a></li>
           </ul>
         </div>
       </div>
@@ -120,7 +121,7 @@
     
     <!-- Site footer -->
     <div class="navbar navbar-inverse navbar-fixed-bottom">
-      <div class="col-sm-2 col-sm-offset-5">
+      <div class="col-sm-3 col-sm-offset-5">
         <a class="navbar-brand" href="https://www.youtube.com/watch?v=KxmLNctBi10">&copy; PyBursa 2015</a>
       </div>
       <!--<div class="container">
