--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
-    <title>Main</title>
+    <title>Results</title>
     
     {% load staticfiles %}
     <!-- Bootstrap core CSS -->
@@ -49,8 +49,8 @@
           <ul class="nav navbar-nav">
             <li><a href="{% url 'index' %}">Main</a></li>
             <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
-            <li><a href="{% url 'equation' %}">Equotion</a></li>
+            <li><a href="{% url 'student_list' %}">Students</a></li>
+            <li class="active"><a href="{% url 'equation' %}">Equation</a></li>
           </ul>
         </div>
       </div>
@@ -59,59 +59,27 @@
     <div class="container theme-showcase" role="main">
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1 class="course">Students of PyBursa</h1>
-        <div class="bs-example" data-example-id="simple-table">
-          <table class="table table-striped table table-bordered">
-            <caption>Graduation year - 2015.</caption>
-            <thead>
-              <tr>
-                <th>No</th>
-                <th>Surname</th>
-                <th>Name</th>
-                <th>Address</th>
-                <th>Skype</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row"><a class="table" href="{% url 'student_detail' %}">1</a></th>
-                <td>Persianova</td>
-                <td>Olena</td>
-                <td>Kyivska Street 55/11, Kharkiv, 63101, Ukrane</td>
-                <td>Olena.Persianova</td>
-              </tr>
-              <tr>
-                <th scope="row"><a class="table" href="#">2</a></th>
-                <td>Thornton</td>
-                <td>Jacob</td>
-                <td>Kyivska Street 55/22, Lviv, 63101, Ukrane</td>
-                <td>Jacob.Thornton</td>
-              </tr>
-              <tr>
-                <th scope="row"><a class="table" href="#">3</a></th>
-                <td>King</td>
-                <td>Larry</td>
-                <td>Shevchenka Street 55/22, Kyiv, 63101, Ukrane</td>
-                <td>Larry.King</td>
-              </tr>
-              <tr>
-                <th scope="row"><a class="table" href="#">4</a></th>
-                <td>Edison</td>
-                <td>Thomas</td>
-                <td>Shevchenka Street 55/22, Zaporizhia, 63101, Ukrane</td>
-                <td>Thomas.Edison</td>
-              </tr>
-              <tr>
-                <th scope="row"><a class="table" href="#">5</a></th>
-                <td>Truman</td>
-                <td>Harry</td>
-                <td>Shevchenka Street 55/22, Odessa, 63101, Ukrane</td>
-                <td>Harry.Truman</td>
-              </tr>
-            </tbody>
-          </table>
-        </div><!-- /example -->
+
       </div>
+      <h1 class="course">Results</h1>
+      <p>Квадратное уравнение a*x*x + b*x + c = 0</p>
+      <ul>
+        <li>a = {{ result.a }}</li>
+        {{ result.errors.a }}<br>
+        <li>b = {{ result.b }}</li>
+        {{ result.errors.b }}<br>
+        <li>c = {{ result.c }}</li>
+        {{ result.errors.c }}<br>
+      </ul>
+        <p>{{ result.result.0 }}</p>
+        <p>{{ result.result.1 }}</p>
+
+
+      
+      <!-- Site footer -->
+      <footer class="footer">
+      
+      </footer>
       
     </div>
     
