--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -36,14 +36,14 @@
 <br>
 {% if flag %}
     {% if d > 0 %}
-        <p><small>Дискриминант:</small> {{ d }}</p>
-        <p><small>Квадратное уравнение имеет два действительных корня:</small> x1 = {{ x1 }}, x2 = {{ x2 }}</p>        
+        <p>Дискриминант: {{ d }}</p>
+        <p>Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}</p>        
     {% elif d == 0 %}
-        <p><small>Дискриминант:</small> {{ d }} </p>
-        <p><small>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень:</small> x1 = x2 = {{ x }} </p>
+        <p>Дискриминант:{{ d }} </p>
+        <p>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x }} </p>
     {% elif d < 0 %}
-        <p><small>Дискриминант:</small> {{ d }}</p>
-        <p><small>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.</small></p>              
+        <p>Дискриминант: {{ d }}</p>
+        <p>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.</p>              
     {% endif %}
 {% endif %}
 </div>
