modified results.html second time

--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -33,21 +33,24 @@
 <p><small>{{ coef_b_err }}</small> </p>
 <p>c = {{ c }} </p>
 <p><small>{{ coef_c_err }}</small></p>
-<br>
+</div>
+</div>
 {% if flag %}
     {% if d > 0 %}
-        <p>Дискриминант: {{ d }}</p>
-        <p>Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}</p>        
+    <br>
+        Дискриминант: {{ d }}<br>
+        Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}<br>
+        <br>        
     {% elif d == 0 %}
-        <p>Дискриминант:{{ d }} </p>
-        <p>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x }} </p>
+        Дискриминант:{{ d }} <br>
+        Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x }} <br>
+    <br>
     {% elif d < 0 %}
-        <p>Дискриминант: {{ d }}</p>
-        <p>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.</p>              
+        Дискриминант: {{ d }}<br>
+        Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.<br>              
+    <br>
     {% endif %}
 {% endif %}
-</div>
-</div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   {% load staticfiles %}
   <script src="{% static '../../../../static/js/jquery.min.js' %}"></script>
