Updated quadratic/templates/results.html to show Discriminant: 0

--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -8,5 +8,5 @@
 {% if c == '' %}коэффициент не определен{% elif c.isdigit == False%}коэффициент не целое число{% endif %}
 </ul>
 
-<h3>{% if discr %}Дискриминант: {{ discr }}</h3>{% endif %}
+<h3>{% if discr != None %}Дискриминант: {{ discr }}</h3>{% endif %}
 <h3>{% if discr != None and discr < 0 %}Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.{% elif discr == 0 %}Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x }}{% elif discr > 0 %}Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}{% endif %}</h3>
