--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -4,25 +4,17 @@
   <meta charset="utf-8">    
 </head>
 <body>
-  <h1>Квадратное уравнение a*x**2 + b*x + c = 0</h1>
-  <div class="row">
-    <form>
-      {% csrf_token %}
-      {{ form.as_p }}
-      <input type="submit">
-    </form>
-  </div> 
-{% if a %}    
-  {% if discr > 0 %}
-    <h3>Дискриминант: {{discr}} </h3>
-    <h3>Квадратное уравнение имеет два действительных корня: х1 = {{roots.0}}, х2 = {{roots.1}} </h3>
-  {% elif discr == 0 %}
-    <h3>Дискриминант: {{discr}} </h3>
-    <h3>Квадратное уравнение имеет два равных действительных корня: х1 = х2 = {{roots.0}} </h3>
-  {% else %}
-    <h3>Дискриминант: {{discr}} </h3>
-    <h3>Квадратное уравнение не имеет действительных корней </h3>
-  {% endif %}
-{% endif %}  
+  <h1>Квадратное уравнение a*x*x + b*x + c = 0</h1>
+
+<ul>
+  <li>a = {{ a }}</li>
+  <p>{{ mes_a }}</p>
+  <li>b = {{ b }}</li>
+  <p>{{ mes_b }}</p>
+  <li>c = {{ c }}</li>
+  <p>{{ mes_c }}</p>
+</ul>
+<div>{{ discriminant }}</div>
+<div>{{ message }} {{ roots }}</div>
 </body>
 </html>
