new urls on styles and pages, css corrected a little

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -103,7 +103,9 @@ td {
 }
 
 .manager {
-  padding-left: 80px;
+  padding-left: 0px;
+  width: 515px;
+  height: 130px;
 }
 
 #header_sponsors_contacts {
