--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,10 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <link href="http://getbootstrap.com/favicon.ico" rel="icon">
   <title>Main page</title>
-  <link href="../static/css/bootstrap.css" rel="stylesheet">
-  <link href="../static/css/style.css" rel="stylesheet">
-  <script src="../static/js/bootstrap.min.js">
+  {% load staticfiles %}
+  <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+  <link href="{% static 'css/style.css' %}" rel="stylesheet">
+  <script src="{% static 'js/bootstrap.min.js' %}">
   </script>
 </head>
 <body>
@@ -20,13 +21,14 @@
       <nav>
         <ul class="nav nav-pills pull-right">
           <li role="presentation">
-            <a href="index.html">Main</a>
+            <a href="{% url 'index' %}">Main</a>
+
           </li>
           <li role="presentation">
-            <a href="student_list.html">Students</a>
+            <a href="{% url 'student_list' %}">Students</a>
           </li>
           <li role="presentation">
-            <a href="contact.html">Contacts</a>
+            <a href="{% url 'contact' %}">Contacts</a>
           </li>
         </ul>
       </nav>
