--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -9,8 +9,9 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <link href="http://getbootstrap.com/favicon.ico" rel="icon">
   <title>Student details</title>
-  <link href="../static/css/bootstrap.css" rel="stylesheet">
-  <link href="../static/css/style.css" rel="stylesheet">
+  {% load staticfiles %}
+  <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+  <link href="{% static 'css/style.css' %}" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -18,13 +19,13 @@
       <nav>
         <ul class="nav nav-pills pull-right">
           <li role="presentation" class="text-left">
-            <a href="index.html">Main</a>
+            <a href="{% url 'index' %}">Main</a>
           </li>
           <li role="presentation" class="text-center">
-            <a href="student_list.html">Students</a>
+            <a href="{% url 'student_list' %}">Students</a>
           </li>
           <li role="presentation" class="text-right">
-            <a href="contact.html">Contacts</a>
+            <a href="{% url 'contact' %}">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -33,7 +34,7 @@
     <div class="row marketing">
       <div class="col-lg-6">
       <h2 class="text-left">Romanova Natalia</h2><img class="imagehere" src=
-      "../static/images/imagehere.jpg"></div>
+      "{% static 'images/imagehere.jpg' %}"></div>
       <div class="col-lg-6 grey_border_line">
         <h4>Student's card</h4>
       </div>
@@ -123,7 +124,7 @@
   <footer class="footer">
     </footer>
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <script src="../static/js/bootstrap.js">
+  <script src="{% static 'js/bootstrap.min.js' %}">
   </script>
 </body>
 </html>
