--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,6 @@
     <meta content="" name="description">
     <meta content="Orest Stetsiak" name="author">
     <title>PyBursa main page</title>
-    <!-- Bootstrap core CSS -->
     <link href="{% static 'images/favicon.png' %}" rel="icon">
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
@@ -25,6 +24,7 @@
           <a class="navbar-brand" href="{% url 'index' %}">Main</a>
           <a class="navbar-brand" href="{% url 'contact' %}">Contacts</a>
           <a class="navbar-brand" href="{% url 'student_list' %}">Students</a>
+          <a class="navbar-brand" href="{% url 'quadratic_start' %}">QE</a>
         </div>
         <div class="navbar-collapse collapse" id="navbar">
           <form class="navbar-form navbar-right">
