--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -25,6 +25,7 @@
           <a class="navbar-brand" href="{% url 'index' %}">Main</a>
           <a class="navbar-brand" href="{% url 'contact' %}">Contacts</a>
           <a class="navbar-brand" href="{% url 'student_list' %}">Students</a>
+          <a class="navbar-brand" href="{% url 'quadratic_start' %}">QE</a>
         </div>
       </div>
     </nav>
