--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -1,28 +1,62 @@
-
-
-<pre>Квадратное уравнения: a*x*x + b*x +c = 0</pre>
-
-<pre>
-a = {{lists_of_vars.a}}
-{{lists_of_vars.a_msg}}
-b = {{lists_of_vars.b}}
-{{lists_of_vars.b_msg}}
-c = {{lists_of_vars.c}}
-{{lists_of_vars.c_msg}}
-
-{% if lists_of_vars.discr or lists_of_vars.discr == 0 %}
-Дискриминант: {{lists_of_vars.discr}}
-{% endif %}
-
-{% if lists_of_vars.discr and lists_of_vars.discr < 0 %}
-Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.
-
-{% elif lists_of_vars.x1 != lists_of_vars.x2 %}
-Квадратное уравнение имеет два действительных корня: x1 = {{lists_of_vars.x1}}, x2 = {{lists_of_vars.x2}}
-
-{% elif lists_of_vars.discr == 0 %}
-Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{lists_of_vars.x}}
-{% endif %}
-
-</pre>
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    {% load staticfiles %}
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="" name="description">
+    <meta content="" name="author">
+    <title>QE</title>
+    <link href="{% static 'images/favicon.png' %}" rel="icon">
+    <link href="{% static 'fonts/lucida_console.ttf' %}" rel="stylesheet" type='text/css'>
+    <link href="{% static 'fonts/monaco.ttf' %}" rel="stylesheet" type='text/css'>
+    <link href="{% static 'fonts/lekton_regular.ttf' %}" rel="stylesheet" type='text/css'>
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/jumbotron.css' %}" rel="stylesheet">
+    <link href="{% static 'css/starter-template.css' %}" rel="stylesheet">
+  </head>
+  <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button aria-controls="navbar" aria-expanded="false" class=
+            "navbar-toggle collapsed" data-target="#navbar" data-toggle=
+            "collapse" type="button"><span class="sr-only">Toggle
+          navigation</span> <span class="icon-bar"></span> <span class=
+            "icon-bar"></span> <span class="icon-bar"></span></button>
+          <a class="navbar-brand" href="{% url 'index' %}">Main</a>
+          <a class="navbar-brand" href="{% url 'contact' %}">Contacts</a>
+          <a class="navbar-brand" href="{% url 'student_list' %}">Students</a>
+          <a class="navbar-brand" href="{% url 'quadratic_start' %}">QE</a>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="starter-template">
+       <h1><strong>Квадратное уравнения: a*x*x + b*x +c = 0</strong></h1>
+			<pre>
+			a = {{lists_of_vars.a}}
+			{{lists_of_vars.a_msg}}
+			b = {{lists_of_vars.b}}
+			{{lists_of_vars.b_msg}}
+			c = {{lists_of_vars.c}}
+			{{lists_of_vars.c_msg}}
+			{% if lists_of_vars.discr or lists_of_vars.discr == 0 %}
+			Дискриминант: {{lists_of_vars.discr}}
+			{% endif %}
+			{% if lists_of_vars.discr and lists_of_vars.discr < 0 %}
+			Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.
+			{% elif lists_of_vars.x1 != lists_of_vars.x2 %}
+			Квадратное уравнение имеет два действительных корня: x1 = {{lists_of_vars.x1}}, x2 = {{lists_of_vars.x2}}
+			{% elif lists_of_vars.discr == 0 %}
+			Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{lists_of_vars.x}}
+			{% endif %}
+			</pre>
+        <script src=
+          "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
+        <script src="{% static 'js/bootstrap.js' %}"></script>
+      </div>
+    </div>
+  </body>
+</html>
