quadratic calculation added

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,9 @@
           <li role="presentation">
             <a href="{% url 'contact' %}">Contacts</a>
           </li>
+          <li role="presentation">
+            <a href="{% url 'results' %}">Quadratic Calc</a>
+          </li>
         </ul>
       </nav>
       <h3 class="text-muted">ItBursa</h3>
