--- a/templates/index.html
+++ b/templates/index.html
@@ -51,35 +51,24 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-            	<h1>PyBursa</h1>
-                <h2>Description</h2>
-                <p>Наибольшей проблемой всех учебников и статей, по которым начинают изучать Python - это осутствие практики с освоенным материалом.</p>
-                <p>Можно читать тонны ресурсов по веб-программированию на Python - и не научиться ничему, потому что знания, которые вы не успели применить,очень быстро забываются.</p>
+                <div class="well">
+                    <h1>Bursa</h1>
+                    <p>Данное направление позволяет освоить одну из самых популярных специальностей в IT-индустрии – программист. Немаловажным фактором является то, что слушателям предоставляется возможность ознакомиться с разными направлениями в программировании и выбрать для себя наиболее подходящий вариант. В программу курса включаются все аспекты программирования – начиная от основ алгоритмизации и заканчивая новейшими инструментариями используемыми в современной индустрии. Также в курс включаются предметы выходящие за рамки программирования, где слушатели знакомятся с основами проектирования, построением сложных систем и управлением программными проектами.</p>
+                </div>
+                	
                 <h2>Program</h2>
                 <table class="table table-striped table-hover">
                     <thead>
                         <tr>
-                            <th>Занятие </th>
-                            <th>Тема </th>
-                            <th>Содержание </th>
+                            <th>Курс</th>
+                            <th>Описание</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>01 </td>
-                            <td>Основы Python </td>
-                            <td>zen, pep8, pylint, tools, IDE консоль, типы данных, операторы синтаксис управляющих конструкций (if, for...) исключения и разбор стектрейса кодировка в Python </td>
-                        </tr>
-                        <tr>
-                            <td>02 </td>
-                            <td>Строки и итераторы </td>
-                            <td>работа со строками и итерируемыми типами запуск скрипта и параметры git http://try.github.com/levels/ </td>
-                        </tr>
-                        <tr>
-                            <td>03 </td>
-                            <td>Функции и модульность </td>
-                            <td>функции (def, lambda) генераторы списков модули, структура </td>
-                        </tr>
+                    {% for course in courses %}
+                        <tr>{{ course.name }}</tr>
+                    {% endfor %}
+
                     </tbody>
                 </table>
             </div>
