--- a/templates/contact.html
+++ b/templates/contact.html
@@ -26,10 +26,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main</a><li>
+            <li><a href="{% url 'courses:index' %}">Main</a><li>
             <li class="active"><a href="{% url 'contact' %}">Contacts</a><li>
-            <li><a href="{% url 'student_list' %}">Students</a><li>
-            <li><a href="{% url 'results' %}">Results</a><li>
+            <li><a href="{% url 'students:list_view' %}">Students</a><li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
