--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Courses</title>
+    <title>Course detail</title>
     {% load staticfiles %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/starter-template.css' %}" rel="stylesheet">
@@ -28,7 +28,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="{% url 'courses:index' %}">Main</a><li>
             <li><a href="{% url 'contact' %}">Contacts</a><li>
-            <li><a href="{% url 'students:list_view' %}">Students</a><li>
+            <li><a href="{% url 'students:list_view' %}?course_id={{ course.id }}">Students</a><li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -38,34 +38,32 @@
 
       <div class="starter-template">
         <div class="container">
-          <h2>PyBursa</h2>
-          <h3>Organization description:</h3>
-          <p>PyBursa provides the most popular Python classes in Kharkiv</p>
-      </div>
-      <div class="container">
-        <h3>Courses Program</h3>
-        <br>
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Course</th>
-                <th>Description</th>
-              </tr>
-            </thead>
-            <tbody>                  
-                {% block content %}
-                  {% for course in object_list %}
+        {% block content %}
+              <h2>{{ course.name }} course details</h2>
+              <h3>{{ course.description }}</h3>
+              <h3>Course plan</h3>
+              <br>
+              <table class="table">
+                <thead>
                   <tr>
-                    <td><a class="out-link" href="{{ course.get_url }}">{{ course.name }}</a></td>
-                    <td>{{ course.short_description }}</td>
+                    <th>Lesson</th>
+                    <th>Description</th>
                   </tr>
-                  {% empty %}
-                    <h3>No courses</h3>
-                  {% endfor %}
-                {% endblock %}
-            </tbody>
-          </table>
-        </br>
+                </thead>
+                <tbody>   
+					          {% for lesson in lessons_list %}
+                      <tr>
+                        <td>{{ lesson.subject }}</td>
+                        <td>{{ lesson.description }}</td>
+                      </tr>
+                    {% empty %}
+                        <h3>No courses</h3>
+                    {% endfor %}
+                </tbody>
+              </table>
+              </br>
+        {% endblock %}
+      </div>
     </div><!-- /.container -->
 
 
