--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -26,7 +26,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main</a><li>
+            <li><a href="{% url 'courses:index' %}">Main</a><li>
             <li><a href="{% url 'contact' %}">Contacts</a><li>
             <li class="active"><a href="{% url 'student_list' %}">Students</a><li>
             <li><a href="{% url 'results' %}">Results</a><li>
