--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Courses</title>
+    <title>Student detail</title>
     {% load staticfiles %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/starter-template.css' %}" rel="stylesheet">
@@ -26,9 +26,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'courses:index' %}">Main</a><li>
+            <li><a href="{% url 'courses:index' %}">Main</a><li>
             <li><a href="{% url 'contact' %}">Contacts</a><li>
-            <li><a href="{% url 'students:list_view' %}">Students</a><li>
+            <li class="active"><a href="{% url 'students:list_view' %}">Students</a><li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -37,35 +37,44 @@
     <div class="container">
 
       <div class="starter-template">
+      <h1>Student details</h1>
         <div class="container">
-          <h2>PyBursa</h2>
-          <h3>Organization description:</h3>
-          <p>PyBursa provides the most popular Python classes in Kharkiv</p>
-      </div>
-      <div class="container">
-        <h3>Courses Program</h3>
-        <br>
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Course</th>
-                <th>Description</th>
-              </tr>
-            </thead>
-            <tbody>                  
-                {% block content %}
-                  {% for course in object_list %}
-                  <tr>
-                    <td><a class="out-link" href="{{ course.get_url }}">{{ course.name }}</a></td>
-                    <td>{{ course.short_description }}</td>
+        {% block content %}
+              <h2>{{ student.name }} {{ student.surname }}</h2>
+              <br>
+              <table class="table">
+                <tr>
+                  <td>Birth day</td>
+                  <td>{{ student.date_of_birth }}</td>
+                </tr>
+                <tr>
+                  <td>Address</td>
+                  <td>{{ student.address }}</td>
+                </tr>
+                <tr>
+                  <td>Email</td>
+                  <td>{{ student.email }}</td>
+                </tr>
+                <tr>
+                  <td>Skype</td>
+                  <td>{{ student.skype }}</td>
+                </tr>
+                <tr>
+                  <td>Phone</td>
+                  <td>{{ student.phone }}</td>
+                </tr>
+                <tr>
+                  <td>Courses</td>
+                  <td>{% for course in student.courses.all %}
+                          <a class="out-link" href="/courses/{{ course.id }}"> {{ course }}</a>
+                      {% endfor %}</td>
                   </tr>
-                  {% empty %}
-                    <h3>No courses</h3>
-                  {% endfor %}
-                {% endblock %}
-            </tbody>
-          </table>
-        </br>
+                </tr>
+                </tbody>
+              </table>
+              </br>
+        {% endblock %}
+      </div>
     </div><!-- /.container -->
 
 
