--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Courses</title>
+    <title>Students List</title>
     {% load staticfiles %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/starter-template.css' %}" rel="stylesheet">
@@ -26,9 +26,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'courses:index' %}">Main</a><li>
+            <li><a href="{% url 'courses:index' %}">Main</a><li>
             <li><a href="{% url 'contact' %}">Contacts</a><li>
-            <li><a href="{% url 'students:list_view' %}">Students</a><li>
+            <li class="active"><a href="{% url 'students:list_view' %}">Students</a><li>  
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -38,34 +38,36 @@
 
       <div class="starter-template">
         <div class="container">
-          <h2>PyBursa</h2>
-          <h3>Organization description:</h3>
-          <p>PyBursa provides the most popular Python classes in Kharkiv</p>
-      </div>
-      <div class="container">
-        <h3>Courses Program</h3>
-        <br>
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Course</th>
-                <th>Description</th>
-              </tr>
-            </thead>
-            <tbody>                  
-                {% block content %}
-                  {% for course in object_list %}
+        <h2>Students list</h2>
+        <br></br>
+        <br></br>
+        {% block content %}
+              <table class="table">
+                <thead>
                   <tr>
-                    <td><a class="out-link" href="{{ course.get_url }}">{{ course.name }}</a></td>
-                    <td>{{ course.short_description }}</td>
+                    <th>Name\Surname</th>
+                    <th>Address</th>
+                    <th>Skype</th>
+                    <th>Course</th>
                   </tr>
+                </thead>
+                <tbody>   
+					        {% for student in st_list %}
+                      <tr>
+                        <td><a class="out-link" href="{% url 'students:list_view' %}{{ student.id }}">{{ student.name }} {{ student.surname }}</a></td>
+                        <td>{{ student.address }}</td>
+                        <td>{{ student.skype }}</td>
+                        <td>{% for course in student.courses.all %}
+                                <a class="out-link" href="/courses/{{ course.id }}"> {{ course }}</a>
+                            {% endfor %}</td>
+                      </tr>
                   {% empty %}
-                    <h3>No courses</h3>
+                        <h3>No students</h3>
                   {% endfor %}
-                {% endblock %}
-            </tbody>
-          </table>
-        </br>
+                </tbody>
+              </table>
+        {% endblock %}
+      </div>
     </div><!-- /.container -->
 
 
