--- a/templates/contact.html
+++ b/templates/contact.html
@@ -18,7 +18,7 @@
     <ul class="nav nav-tabs">
       <li role="presentation" class="active"><a href="{% url 'contact' %}">Contacts</a></li>
       <li role="presentation"><a href="{% url 'index' %}">Main</a></li>
-      <li role="presentation"><a href="{% url 'student_list' %}">Students</a></li>
+      <li role="presentation"><a href="{% url 'students:list_view' %}">Students</a></li>
     </ul>
     <h3 class="dir">Director</h3>
     <div class="bs-example" id="director">
