--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Main Page</title>
+    <title>Bursa</title>
     <!-- Bootstrap -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
@@ -65,12 +65,6 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {% for course in courses %}
-                            <tr>
-                                <td><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></td> 
-                                <td>{{ course.description }}</td> 
-                            </tr>
-                        {% endfor %}
                     </tbody>
                 </table>
             </div>
